--- a/client/index.html
+++ b/client/index.html
@@ -2,13 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- 移动端优化：禁止缩放、全屏显示、适配刘海屏 -->
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
+    <!-- 苹果设备：全屏模式 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <!-- 安卓设备：全屏模式 -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <!-- PWA主题色 -->
+    <meta name="theme-color" content="#0f172a" />
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <title>异星幸存者 - Alien Survivor</title>
+    <style>
+      /* 防止移动端下拉刷新、橡皮筋效果 */
+      body {
+        overscroll-behavior: none;
+        overflow: hidden;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        touch-action: none;
+        -webkit-user-select: none;
+        user-select: none;
+      }
+      /* 适配刘海屏安全区域 */
+      #root {
+        padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+      }
+    </style>
   </head>
 
   <body>
